<resources>
    <string name="app_name">CineFlix</string>
    <string name="cineflix">CINEFLIX</string>
    <string name="nueva_peli">Nueva pelicula</string>
    <string name="ver_sesiones">Ver sesiones</string>
    <string name="sesiones">Sesiones</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="volver">Volver</string>
    <string name="nom_pelicula">Nombre de la pelicula</string>
    <string name="guardar">Guardar</string>
    <string name="nueva_sesion">Nueva sesión</string>
    <string name="txtHorarios">Horarios</string>
    <string name="guardar_hora">Guardar</string>
    <string name="borrar_hora">Borrar horario</string>
    <string name="nuevoNombreSes">Nuevo nombre</string>

    <!-- Click pelicula -->
    <string name="txtClickPeliculaSalas">Salas: </string>
    <string name="txtClickPeliculaNombre">Nombre: </string>
    <string name="txtClickPeliculaHoras">Horas: </string>

    <!-- Btns mod y borrar -->
    <string name="borrar">Borrar</string>
    <string name="modificar">Modificar</string>

    <!-- Para poner varios tags -->
    <item name="nombre" type="id" />
    <item name="hora" type="id" />
    <item name="idPeli" type="id" />
    <item name="idSesion" type="id" />
</resources>